@@ -1,4 +1,4 @@
-.\" $NetBSD: pkgfind.1,v 1.8 2005/05/25 16:53:59 wiz Exp $
+.\" $NetBSD: pkgfind.1,v 1.9 2011/11/07 20:27:30 shattered Exp $
 .\"
 .\" Copyright (c) 2004 Peter Postma <peter@pointless.nl>
 .\" All rights reserved.
@@ -58,10 +58,20 @@ Search in the
 field, instead of looking at package names.
 .It Fl c
 Do case sensitive searches.
+.It Fl D
+Show the contents of the
+.Dq DESCR
+file when a match is found.
 .It Fl M
 Search in the
 .Dq MAINTAINER
 field, instead of looking at package names.
+.It Fl P
+Search in the
+.Dq PLIST
+file, instead of looking at package names.
+Useful when you only know the name of
+a file contained in a package.
 .It Fl n Ar number
 Stop searching after
 .Ar number
